[gd_scene load_steps=2 format=3 uid="uid://fdunjmwd2seg"]

[ext_resource type="Script" path="res://gui/start_menu.gd" id="1_xabxa"]

[node name="startmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xabxa")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -6.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.294118, 0.498039, 0.482353, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -69.0
offset_right = 52.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -68.0
offset_right = 51.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="SinglePlayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "singleplayer"

[node name="Multiplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "multiplayer"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "quit"

[connection signal="button_down" from="VBoxContainer/settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="VBoxContainer/SinglePlayer" to="." method="_on_single_player_button_down"]
[connection signal="button_down" from="VBoxContainer/Multiplayer" to="." method="_on_multiplayer_button_down"]
[connection signal="button_down" from="VBoxContainer/exit" to="." method="_on_exit_button_down"]
